--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -27,6 +27,7 @@
         <button class="ghost" id="nav-bas" style="display:none;">BAS Reporting</button>
         <button class="ghost" id="nav-invoices" style="display:none;">Invoices</button>
         <button class="ghost" id="nav-settings">Settings</button>
+        <button class="ghost" id="nav-docs" type="button" title="Open documentation (new tab)">Docs</button>
         <button class="ghost" id="nav-about">About</button>
       </div>
     </div>
