--- a/views/partials/settings.html
+++ b/views/partials/settings.html
@@ -310,6 +310,11 @@
      <button class="secondary" id="btn-super-guarantee-rates" style="white-space: nowrap;" type="button">
       Super Guarantee Percentages
      </button>
+     <div id="open-mobile-view-wrapper" style="display:none;">
+      <button class="secondary" id="btn-open-mobile-view" type="button">
+       Open Mobile View
+      </button>
+     </div>
      <div id="clear-cache-wrapper" style="display:none;">
       <button class="danger" id="btn-clear-cache">
        Clear Local Cache
